Fix carousel vertical scroll shifting bug

--- a/Blog.Web/css/home.css
+++ b/Blog.Web/css/home.css
@@ -56,6 +56,7 @@
 .post-carousel {
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden; /* Fix vertical shifting bug */
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
@@ -101,6 +102,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    -webkit-user-drag: none;
+    user-select: none;
 }
 
 .carousel-dots {
